--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#ffffff" />
     <meta name="description" content="Interactive CPU scheduling algorithm visualizer" />
     <link rel="apple-touch-icon" href="/icon.svg" />
-    <title>CPU Scheduling Visualizer</title>
+    <title>Quantix</title>
   </head>
   <body>
     <div id="root"></div>
