feat(seo): implement automated sitemaps, rich schema, and 404 handling
- Add vite-plugin-sitemap for automatic sitemap.xml generation
- Enhance JSON-LD with SoftwareApplication and HowTo (Guide page) schemas
- Create a dedicated 404 page with 'noindex' meta tag
- Add static fallback Open Graph tags to index.html for better social crawling
- Finalize technical SEO strategy for production readiness

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,11 @@
     <link rel="alternate icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#ffffff" />
-    <meta name="description" content="Interactive CPU scheduling algorithm visualizer" />
+    <meta name="description" content="Quantix: Interactive CPU Scheduling Visualizer supporting 11 algorithms and multi-core simulation." />
+    <meta property="og:title" content="Quantix | CPU Scheduling Visualizer" />
+    <meta property="og:description" content="Visualize and compare 11 CPU scheduling algorithms with real-time Gantt charts." />
+    <meta property="og:image" content="/logo.png" />
+    <meta name="twitter:card" content="summary_large_image" />
     <link rel="apple-touch-icon" href="/logo-192.png" />
     <title>Quantix</title>
   </head>
